--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <label for="txtApellido">Apellido:</label><br>
                 <input type="text" name="txtApellido" value="" pattern="[A-Za-z]+"required><br>
                 <label for="txtTelefono">Teléfono:</label><br>
-                <input minlength="10" maxlength="10" type="tel" name="txtTelefono" pattern="[0-9]+" required><br> 
+                <input minlength="10" maxlength="10" type="tel" name="txtTelefono" pattern="^0[9]\d{8}$" required><br>
                 <label for="txtCorreo">Correo:</label><br>
                 <input type="email" name="txtCorreo" value="" required><br>
                 <label for="txtClave">Clave:</label><br>
